Fixing color contrast with InBloom colors. Adding powered by.

--- a/inBloom/Content/css/_appearance.scss
+++ b/inBloom/Content/css/_appearance.scss
@@ -2,10 +2,10 @@
 $background-primary: #ebf3ef; //Very Light background green.
 $background-secondary: #fff; //White
 $background-tertiary: #0c0d0c; //Dark charcoal color
-$background-forth: #77c69f; //Light green
+$background-forth: #3996d2; //Light green
 
 $font-color-primary: #575655; //Dark Grey
-$font-color-secondary: #77c69f; //Light green
+$font-color-secondary: #3996d2; //Light green
 $font-color-tertiary: #fff; //White
 
 body
@@ -25,7 +25,7 @@ body
 a{
 	font-size: 14px;
 	color: $font-color-secondary;
-	text-decoration: none;
+	text-decoration: underline;	
 }
 
 label{
@@ -55,6 +55,10 @@ input[type=radio]{
 
 	h1,h2,h3,h4,h5{
 		color: $font-color-tertiary;
+	}
+
+	h2{
+		font-size: 22px;
 	}
 
 	ul{
@@ -121,6 +125,10 @@ table{
 	tr{
 		margin-bottom: 10px;
 	}
+
+	tr.highlight{
+		background-color: #d7d7d7;
+	}
 }
 
 .student-0, .student-1, .student-2, .student-3 {
@@ -180,4 +188,13 @@ background-position: 0px 382px;
 
 .interaction-divider{
 	clear: both;
+}
+
+.message{
+	background-color: $font-color-secondary;
+	color:$font-color-tertiary;
+	width: 95%;
+	padding: 10px;
+	border-radius: 5px;
+	margin-bottom: 10px;
 }
